--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+/* .app{
+  background-color: aquamarine;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +43,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
